# picsar

./: .clang-tidy  Makefile_Forthon.in  configure
.github/workflows/: clang_tidy.yml  macos.yml
.github/workflows/dependencies/: clang15.sh
multi_physics/QED/: CMakeLists.txt  README.md
multi_physics/QED/QED_table_generator/: CMakeLists.txt  table_generator.cpp
multi_physics/QED/QED_tests/: CMakeLists.txt  test_picsar_algo.cpp  test_picsar_array.cpp  test_picsar_breit_wheeler_core.cpp  test_picsar_breit_wheeler_tables.cpp  test_picsar_breit_wheeler_tables_generator.cpp  test_picsar_breit_wheeler_tabulated_functions.cpp  test_picsar_chi_functions.cpp  test_picsar_gamma_functions.cpp  test_picsar_phys_constants.cpp  test_picsar_quadrature.cpp  test_picsar_quantum_sync_core.cpp  test_picsar_quantum_sync_tables.cpp  test_picsar_quantum_sync_tables_generator.cpp  test_picsar_quantum_sync_tabulated_functions.cpp  test_picsar_schwinger_engine_core.cpp  test_picsar_serialization.cpp  test_picsar_span.cpp  test_picsar_spec_functions.cpp  test_picsar_tables.cpp  test_picsar_units.cpp  test_picsar_vec_functions.cpp
multi_physics/QED/amrex_example/: CMakeLists.txt
multi_physics/QED/cuda_example/: cuda_example_breit_wheeler.cu  cuda_example_commons.hpp  cuda_example_quantum_synchrotron.cu
multi_physics/QED/kokkos_example/: kokkos_example_breit_wheeler.cpp  kokkos_example_commons.hpp  kokkos_example_quantum_synchrotron.cpp
multi_physics/QED/omp_example/: a.out  compile_commands  omp_example_breit_wheeler.cpp  (+7 more)
utils/forthon_parser/: forthon_parser.py
(+42 files in other folders)
